feat(*): game ui init

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <script src="./ui.js" async></script>
+    <script src="./canvas.js" async></script>
+    <script src="./socket.js" async></script>
   </head>
   <body>
     <div id="container">
