feat(orbs): draw orbs on the map

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script src="./ui.js" async></script>
     <script src="./canvas.js" async></script>
     <script src="./socket.js" async></script>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <div id="container">
